# hypertrack-server

./: README.md  __init__.py  app.py  app_config.py  config.json  pyproject.toml  requirements.txt  utils.py
models/: battery.py  device.py  location.py
resources/: battery.py  device.py  device_status.py  geofence.py  location.py  root.py
