[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Nicholas Femia <femianicholas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_restful = "^0.3.8"
gunicorn = "^20.0.4"
Flask-SQLAlchemy = "^2.4.4"
flask_sqlalchemy = "^2.4.4"
psycopg2 = "^2.8.6"
flask-marshmallow = "^0.14.0"
marshmallow_sqlalchemy = "^0.24.2"
flask_cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
